# WinIsland-X

./: Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: rust.yml
Page/: index.md  package.json  plugin-dev.md
Page/.vitepress/: config.mts
Page/docs/: download.md  getting-started.md  guide.md  index.md
Page/docs/.vitepress/: config.mts
Page/zh/: index.md  plugin-dev.md
src/: main.rs
src/core/: config.rs  i18n.rs  lyrics.rs  mod.rs  plugin.rs  render.rs  smtc.rs
src/ui/expanded/: main_view.rs
src/utils/: color.rs  mod.rs  mouse.rs  physics.rs  screen.rs  updater.rs
src/window/: app.rs  music_settings.rs  settings.rs  tray.rs
winisland_sample_plugin/: Cargo.toml
winisland_sample_plugin/src/: lib.rs
