[package]
name = "WinIsland"
version = "1.0.0"
edition = "2021"

[dependencies]
cpal = "0.15"
realfft = "3.3"
bytemuck = "1.25.0"
skia-safe = { version = "0.93.1", features = ["gpu", "gl"] }
softbuffer = "0.4.8"
tray-icon = "0.19"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_Security", "Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Variant", "Win32_Globalization", "Win32_Graphics_Dwm", "Win32_UI_Controls", "Win32_UI_Controls_Dialogs"] }
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
glow = "0.13"
toml = "0.8"
dirs = "6.0"
open = "5.3"
image = "0.25"
ureq = { version = "2", features = ["json"] }
serde_json = "1.0.149"
rfd = "0.17.2"
once_cell = "1.19"
libloading = "0.9.0"

[build-dependencies]
winres = "0.1"
